2005-08-17  Sven Panne  <sven.panne@aedion.de>
	* linux/audioconvert/ac_adpcm.c, linux/audioconvert/ac_adpcm.h,
	linux/audioconvert/ac_bits.c, linux/audioconvert/ac_channels.c,
	linux/audioconvert/ac_endian.c, linux/audioconvert/ac_endian.h,
	linux/audioconvert/ac_format.c, linux/audioconvert/ac_freq.c,
	linux/audioconvert/ac_helper.c, linux/audioconvert/ac_misc.c,
	linux/audioconvert/ac_wave.h, linux/audioconvert/audioconvert.h,
	linux/audioconvert/test_ac.c, linux/include/AL/alext.h,
	linux/src/al_able.c, linux/src/al_able.h, linux/src/al_config.c,
	linux/src/al_config.h, linux/src/al_distance.h,
	linux/src/al_doppler.h, linux/src/al_error.h, linux/src/al_ext.c,
	linux/src/al_filter.h, linux/src/al_main.c, linux/src/al_main.h,
	linux/src/al_mixer.h, linux/src/al_mspool.h,
	linux/src/al_propagation.h, linux/src/al_rcvar.c,
	linux/src/al_rcvar.h, linux/src/al_state.h, linux/src/al_types.h,
	linux/src/al_vector.c, linux/src/mixaudio16.c,
	linux/src/mixaudio16.h, linux/src/alc/alc_context.h,
	linux/src/alc/alc_device.c, linux/src/alc/alc_device.h,
	linux/src/alc/alc_error.h, linux/src/alc/alc_speaker.c,
	linux/src/alc/alc_speaker.h, linux/src/arch/alsa/alsa.h,
	linux/src/arch/arts/arts.c, linux/src/arch/arts/arts.h,
	linux/src/arch/bsd/bsd_dsp.c,
	linux/src/arch/darwin/darwin_native.h, linux/src/arch/esd/esd.c,
	linux/src/arch/esd/esd.h, linux/src/arch/i386/floatmul.c,
	linux/src/arch/interface/interface_sound.c,
	linux/src/arch/interface/interface_sound.h,
	linux/src/arch/irix/iris.c, linux/src/arch/linux/lin_dsp.c,
	linux/src/arch/null/null.c, linux/src/arch/null/null.h,
	linux/src/arch/portable/floatmul.c, linux/src/arch/sdl/sdl.c,
	linux/src/arch/sdl/sdl.h, linux/src/arch/solaris/solaris_native.c,
	linux/src/arch/waveout/waveout.c,
	linux/src/arch/waveout/waveout.h,
	linux/src/arch/windows/windows_native.c,
	linux/src/extensions/al_ext_mp3.h,
	linux/src/extensions/al_ext_vorbis.h, linux/test/testorient.c: